test/functions/deitz/test_write_type_error.good
test_write_type_error.chpl:2: error: unresolved call 'writeln(type int(64))'
$CHPL_HOME/modules/standard/ChapelIO.chpl:: note: this candidate did not match: writeln(const args ...?n)
test_write_type_error.chpl:: note: because type actual argument #1
$CHPL_HOME/modules/standard/ChapelIO.chpl:: note: is passed to non-type formal 'const _e0_args'
$CHPL_HOME/modules/standard/ChapelIO.chpl:: note: candidates are: writeln()
